--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,35 +2,50 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoAlbumPro"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:targetApi="31">
+
         <activity
-            android:name=".activity.ImageLargeActivity"
-            android:exported="false"
-            android:theme="@style/MyThemeFullScreen"/>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
+            android:name=".activity.CheckPermissionActivity"
             android:screenOrientation="unspecified"
-            android:theme="@style/MyThemeFullScreen">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true"
+            android:screenOrientation="unspecified"
+            android:theme="@style/MyThemeFullScreen" />
+
+        <activity
+            android:name=".activity.SlideActivity"
+            android:exported="true"
+            android:screenOrientation="unspecified"
+            android:theme="@style/MyThemeFullScreen" />
+
+        <activity
+            android:name=".activity.ImageLargeActivity"
+            android:exported="false"
+            android:screenOrientation="unspecified"
+            android:theme="@style/MyThemeFullScreen" />
+
     </application>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
