--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 1
-        versionName "1.0.3"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,10 +35,10 @@ android {
                 output ->
                     def outputFile = output.outputFile
                     if (outputFile.name.contains("debug")){
-                        outputFileName = new File(defaultConfig.applicationId + "_" + defaultConfig.versionName + ".apk")
+                        outputFileName = new File(defaultConfig.applicationId + "-debug-" + defaultConfig.versionName + ".apk")
                     }
                     if (outputFile.name.contains("release")){
-                        outputFileName = new File(defaultConfig.applicationId + "_" + defaultConfig.versionName + ".apk")
+                        outputFileName = new File(defaultConfig.applicationId + "-release-" + defaultConfig.versionName + ".apk")
                     }
             }
     }
@@ -51,12 +51,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'org.jetbrains:annotations:15.0'
-    implementation files('libs\\commons-net-3.3.jar')
+    implementation files('libs/commons-net-3.3.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    //implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
