优化APP大小，处理release异常

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
                     }
             }
     }
+
+    lintOptions{
+        disable 'MissingDefaultResource'
+    }
 }
 
 dependencies {
